Fixed Bug #52063 (DateTime constructor's second argument doesn't have a null default value)